# API-django

./: .gitignore  README.md  pyproject.toml
LittleLemon/: pytest.ini
LittleLemon/LittleLemon/: settings.py  urls.py
LittleLemon/LittleLemonAPI/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
LittleLemon/LittleLemonAPI/migrations/: 0001_initial.py  0002_create_groups.py  0003_category_menuitem_featured_alter_menuitem_name_and_more.py
LittleLemon/tests/: README.md  conftest.py  test_cart.py  test_categories.py  test_group_management.py  test_menu_filtering.py  test_menu_items.py  test_orders.py  test_users.py
LittleLemon/tests/fixtures/: cart.py  menu_items.py  orders.py  users.py
